add api and display functions

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meal App</title>
+  <script
+      src="https://kit.fontawesome.com/e520ead38a.js"
+      crossorigin="anonymous"
+    ></script>
+  <title>TV SHOW APP</title>
 </head>
 <body>
   <nav>
     <ul>
       <img src="" alt="">
-      <li>Meals</li>
+      <li>Shows</li>
       <li>Menu</li>
       <li>Contact</li>
     </ul>
   </nav>
-
+  <main class="main-container">
+    <section class="show-container"></section>
+  </main>
   <footer>
     <p>Created by Mert & Sohail</p>
   </footer>
